--- a/package.json
+++ b/package.json
@@ -14,12 +14,22 @@
   },
   "dependencies": {
     "@google-analytics/data": "^4.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@supabase/ssr": "^0.0.9",
     "@supabase/supabase-js": "^2.38.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.2.4",
     "stripe": "^14.4.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2"
