--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
     "@supabase/ssr": "^0.0.9",
     "@supabase/supabase-js": "^2.38.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
